# AudioChain

./: .gitignore  .gitmodules  AudioChain.jucer  CMakeLists.txt  README.md  REFACTOR_NOTES.md  WINDOWS_BUILD.md  asio.ps1  install_vst2_sdk.sh
.github/workflows/: build.yml
Builds/MacOSX/: Info-App.plist
Source/: AudioInputManager.cpp  AudioInputManager.h  AudioProcessor.cpp  AudioProcessor.h  Main.cpp  MainComponent.cpp  MainComponent.h  PluginChainComponent.cpp  PluginChainComponent.h  PluginHost.cpp  PluginHost.h  UserConfig.cpp  UserConfig.h  VST3PluginHost.cpp  VST3PluginHost.h
